update for itf specifics